# project-group-2

./: .env-example  .gitignore  Dockerfile  LICENSE  README.eng.md  README.md  alembic.ini  docker-compose.yaml  main.py  project_team_2.db  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: 1b516b3fd6f4_init.py  2d1449028001_init.py  343ac2b193b0_init.py  3e74bf3e7aa9_init.py  4252389afcc7_init.py  566c5deefb11_revision_after_merge.py  59d9cb72f668_add_public_id.py  62a8a85d9a07_init.py  6674b87c0f8f_init.py  6d3e5a292af5_user_is_active_added.py  70db5ebd80c3_add_avatar_column_to_user.py  833cbc1bec21_upgrade_user.py  91da35268c52_init.py  c7ce0d26ed98_init.py  ccbb26753da7_small_changes.py  cecba23dcc72_add_avatar_column_to_user.py  d90d01b1ee63_init.py  d9fdbdde9eb9_add_avatar_column_to_user.py
src/: schemas.py
src/conf/: config.py
src/database/: crud_roles.py  crud_users.py  db.py  models.py  startup.py
src/repository/: comments.py  images.py  tags.py  users.py
src/routes/: access_decorator.py  auth.py  comments.py  images.py  test.py  transformations.py  users.py
src/services/: auth.py  emails.py  images.py
src/services/templates/Client/: base.html  (+3 more)
src/utils/: tags.py
src/views/: test.py
tests/: test_repository_comments.py  test_repository_images.py  test_repository_tags.py  test_repository_users.py  test_routes_auth.py
(+4 files in other folders)
